# pdf-comparator-local

./: PDFComparator.spec  README.md  build.bat  build.sh  config.json  configuracion.py  funciones_comparador.py  install.bat  install.sh  interfaz.py  interfaz_archivos.py  interfaz_carpetas.py  menu_principal.py  pyproject.toml  requirements.txt  run.bat  run.sh
