[project]
name = "pdf-comparator"
version = "1.0.0"
description = "Aplicación de escritorio para comparar documentos PDF y detectar diferencias visualmente"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.23.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]